correct z-index added to modals

--- a/css/style.css
+++ b/css/style.css
@@ -698,6 +698,7 @@ h1 {
   position: fixed;
   top: 120px;
   left: 50%;
+  z-index: 30;
 
   display: none;
   width: 300px;
@@ -714,7 +715,9 @@ h1 {
   position: fixed;
   top: 50%;
   left: 50%;
+  z-index: 30;
 
+  display: none;
   width: 766px;
   height: 561px;
 
@@ -731,6 +734,7 @@ h1 {
   left: 0;
   z-index: 20;
 
+  display: none;
   width: 100%;
   height: 100%;
 
